--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
 		"@sveltejs/adapter-node": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.0",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/jit": "^0.1.1",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
