--- a/package.json
+++ b/package.json
@@ -4,30 +4,31 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
-		"start": "svelte-kit start",
-		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write ."
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^1.0.0-next.4",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/adapter-static": "^1.0.0-next.4",
 		"@sveltejs/kit": "next",
-		"@tailwindcss/jit": "^0.1.18",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
-		"autoprefixer": "^10.2.5",
-		"cssnano": "^5.0.1",
+		"autoprefixer": "^10.3.1",
+		"cssnano": "^5.0.6",
 		"eslint": "^7.25.0",
 		"eslint-config-prettier": "^8.2.0",
 		"eslint-plugin-svelte3": "^3.2.0",
-		"postcss": "^8.2.12",
-		"postcss-load-config": "^3.0.1",
+		"postcss": "^8.3.5",
+		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"svelte": "^3.37.0",
-		"svelte-preprocess": "^4.7.2",
-		"tailwindcss": "^2.1.2",
+		"svelte-preprocess": "^4.7.4",
+		"tailwindcss": "^2.2.4",
 		"tslib": "^2.2.0",
 		"typescript": "^4.2.4",
 		"vite": "^2.2.1"
