--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-netlify": "^1.0.0-next.29",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.4",
-		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^4.22.0",
-		"@typescript-eslint/parser": "^4.22.0",
-		"autoprefixer": "^10.3.1",
-		"cssnano": "^5.0.6",
-		"eslint": "^7.25.0",
-		"eslint-config-prettier": "^8.2.0",
-		"eslint-plugin-svelte3": "^3.2.0",
-		"postcss": "^8.3.5",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.32",
+		"@sveltejs/adapter-node": "^1.0.0-next.52",
+		"@sveltejs/adapter-static": "^1.0.0-next.20",
+		"@sveltejs/kit": "^1.0.0-next.177",
+		"@typescript-eslint/eslint-plugin": "^4.32.0",
+		"@typescript-eslint/parser": "^4.32.0",
+		"autoprefixer": "^10.3.6",
+		"cssnano": "^5.0.8",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"postcss": "^8.3.8",
 		"postcss-load-config": "^3.1.0",
-		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.37.0",
-		"svelte-preprocess": "^4.7.4",
-		"tailwindcss": "^2.2.4",
-		"tslib": "^2.2.0",
-		"typescript": "^4.2.4",
-		"vite": "^2.2.1"
+		"prettier": "~2.4.1",
+		"prettier-plugin-svelte": "^2.4.0",
+		"svelte": "^3.43.0",
+		"svelte-preprocess": "^4.9.5",
+		"tailwindcss": "^2.2.16",
+		"tslib": "^2.3.1",
+		"typescript": "^4.4.3",
+		"vite": "^2.6.1"
 	},
 	"type": "module",
 	"engines": {
 		"node": ">= 12.17.0"
 	},
 	"dependencies": {
-		"@tailwindcss/line-clamp": "^0.2.0",
+		"@tailwindcss/line-clamp": "^0.2.1",
 		"sapper-environment": "^1.0.1"
 	}
 }
