--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
+		"stream": "^0.0.2",
 		"svelte": "^3.43.0",
 		"svelte-preprocess": "^4.9.5",
 		"tailwindcss": "^2.2.16",
