--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,10 @@
 [build]
   command = "npm run build"
   publish = "build/"
-  functions = "functions/"
+  
+[dev]
+ command = "svelte-kit dev"
+ 
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
