--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"node-fetch": "^3.0.0",
 		"postcss": "^8.3.8",
 		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.4.1",
