--- a/.svelte-kit/output/manifest.json
+++ b/.svelte-kit/output/manifest.json
@@ -1,217 +1,177 @@
 {
-  ".svelte-kit/build/runtime/internal/start.js": {
-    "file": "start-0b66cad2.js",
-    "src": ".svelte-kit/build/runtime/internal/start.js",
-    "isEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_singletons-12a22614.js"
-    ],
-    "dynamicImports": [
-      "src/routes/__layout.svelte",
-      "src/routes/__error.svelte",
-      "src/routes/index.svelte",
-      "src/routes/NotFound.svelte",
-      "src/routes/episode/[id]/[season_number]/[episode_number].svelte",
-      "src/routes/seasons/[id]/[season_number].svelte",
-      "src/routes/person/[id].svelte",
-      "src/routes/search/[id].svelte",
-      "src/routes/genre/movie/[id].svelte",
-      "src/routes/genre/tv/[id].svelte",
-      "src/routes/movie/[id].svelte",
-      "src/routes/tv/[id].svelte"
-    ],
-    "css": [
-      "assets/start-464e9d0a.css"
-    ]
-  },
-  "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-4fcc0572.js",
-    "src": "src/routes/__layout.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js",
-      "_singletons-12a22614.js"
-    ],
-    "css": [
-      "assets/pages/__layout.svelte-87c9195c.css"
-    ]
-  },
-  "src/routes/__error.svelte": {
-    "file": "pages/__error.svelte-e843333a.js",
-    "src": "src/routes/__error.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js"
-    ],
-    "css": [
-      "assets/pages/__error.svelte-8a5069d9.css"
-    ]
-  },
-  "src/routes/index.svelte": {
-    "file": "pages/index.svelte-6a5dcc86.js",
-    "src": "src/routes/index.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_MainSection-98c5ae27.js",
-      "_store-892411d9.js",
-      "_Spinner-b4526be0.js",
-      "_stores-d4b77a7d.js"
-    ]
-  },
-  "src/routes/NotFound.svelte": {
-    "file": "pages/NotFound.svelte-1e2d7744.js",
-    "src": "src/routes/NotFound.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js"
-    ]
-  },
-  "src/routes/episode/[id]/[season_number]/[episode_number].svelte": {
-    "file": "pages/episode/[id]/[season_number]/[episode_number].svelte-b2314f8e.js",
-    "src": "src/routes/episode/[id]/[season_number]/[episode_number].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js",
-      "_stores-d4b77a7d.js"
-    ]
-  },
-  "src/routes/seasons/[id]/[season_number].svelte": {
-    "file": "pages/seasons/[id]/[season_number].svelte-f916dde7.js",
-    "src": "src/routes/seasons/[id]/[season_number].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js",
-      "_stores-d4b77a7d.js"
-    ]
-  },
-  "src/routes/person/[id].svelte": {
-    "file": "pages/person/[id].svelte-88649804.js",
-    "src": "src/routes/person/[id].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js",
-      "_stores-d4b77a7d.js"
-    ]
-  },
-  "src/routes/search/[id].svelte": {
-    "file": "pages/search/[id].svelte-d421a237.js",
-    "src": "src/routes/search/[id].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_MainSection-98c5ae27.js",
-      "_stores-d4b77a7d.js",
-      "_store-892411d9.js",
-      "_Spinner-b4526be0.js"
-    ]
-  },
-  "src/routes/genre/movie/[id].svelte": {
-    "file": "pages/genre/movie/[id].svelte-9aaf69d3.js",
-    "src": "src/routes/genre/movie/[id].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_MainSection-98c5ae27.js",
-      "_store-892411d9.js",
-      "_stores-d4b77a7d.js",
-      "_Spinner-b4526be0.js"
-    ]
-  },
-  "src/routes/genre/tv/[id].svelte": {
-    "file": "pages/genre/tv/[id].svelte-20260e3a.js",
-    "src": "src/routes/genre/tv/[id].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_MainSection-98c5ae27.js",
-      "_store-892411d9.js",
-      "_stores-d4b77a7d.js",
-      "_Spinner-b4526be0.js"
-    ]
-  },
-  "src/routes/movie/[id].svelte": {
-    "file": "pages/movie/[id].svelte-6ee5b34d.js",
-    "src": "src/routes/movie/[id].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js",
-      "_Spinner-b4526be0.js",
-      "_Cast-72e210fe.js",
-      "_stores-d4b77a7d.js"
-    ]
-  },
-  "src/routes/tv/[id].svelte": {
-    "file": "pages/tv/[id].svelte-3fe98bb0.js",
-    "src": "src/routes/tv/[id].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js",
-      "_stores-d4b77a7d.js",
-      "_Spinner-b4526be0.js",
-      "_Cast-72e210fe.js"
-    ]
-  },
-  "_vendor-8fe9a59e.js": {
-    "file": "chunks/vendor-8fe9a59e.js"
-  },
-  "_singletons-12a22614.js": {
-    "file": "chunks/singletons-12a22614.js"
-  },
-  "_store-892411d9.js": {
-    "file": "chunks/store-892411d9.js",
-    "imports": [
-      "_vendor-8fe9a59e.js"
-    ]
-  },
-  "_MainSection-98c5ae27.js": {
-    "file": "chunks/MainSection-98c5ae27.js",
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js",
-      "_Spinner-b4526be0.js",
-      "_stores-d4b77a7d.js"
-    ]
-  },
-  "_stores-d4b77a7d.js": {
-    "file": "chunks/stores-d4b77a7d.js",
-    "imports": [
-      "_vendor-8fe9a59e.js"
-    ]
-  },
-  "_Spinner-b4526be0.js": {
-    "file": "chunks/Spinner-b4526be0.js",
-    "imports": [
-      "_vendor-8fe9a59e.js"
-    ],
-    "css": [
-      "assets/Spinner-11011231.css"
-    ]
-  },
-  "_Cast-72e210fe.js": {
-    "file": "chunks/Cast-72e210fe.js",
-    "imports": [
-      "_vendor-8fe9a59e.js",
-      "_store-892411d9.js"
-    ]
-  }
+	".svelte-kit/build/runtime/internal/start.js": {
+		"file": "start-c73c4f98.js",
+		"src": ".svelte-kit/build/runtime/internal/start.js",
+		"isEntry": true,
+		"imports": ["_vendor-8fe9a59e.js", "_singletons-12a22614.js"],
+		"dynamicImports": [
+			"src/routes/__layout.svelte",
+			"src/routes/__error.svelte",
+			"src/routes/index.svelte",
+			"src/routes/NotFound.svelte",
+			"src/routes/episode/[id]/[season_number]/[episode_number].svelte",
+			"src/routes/seasons/[id]/[season_number].svelte",
+			"src/routes/person/[id].svelte",
+			"src/routes/search/[id].svelte",
+			"src/routes/genre/movie/[id].svelte",
+			"src/routes/genre/tv/[id].svelte",
+			"src/routes/movie/[id].svelte",
+			"src/routes/tv/[id].svelte"
+		],
+		"css": ["assets/start-464e9d0a.css"]
+	},
+	"src/routes/__layout.svelte": {
+		"file": "pages/__layout.svelte-4fcc0572.js",
+		"src": "src/routes/__layout.svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": ["_vendor-8fe9a59e.js", "_store-892411d9.js", "_singletons-12a22614.js"],
+		"css": ["assets/pages/__layout.svelte-87c9195c.css"]
+	},
+	"src/routes/__error.svelte": {
+		"file": "pages/__error.svelte-e843333a.js",
+		"src": "src/routes/__error.svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": ["_vendor-8fe9a59e.js"],
+		"css": ["assets/pages/__error.svelte-8a5069d9.css"]
+	},
+	"src/routes/index.svelte": {
+		"file": "pages/index.svelte-d216bd61.js",
+		"src": "src/routes/index.svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": [
+			"_vendor-8fe9a59e.js",
+			"_MainSection-1a73ad24.js",
+			"_store-892411d9.js",
+			"_Spinner-b4526be0.js",
+			"_stores-d4b77a7d.js"
+		]
+	},
+	"src/routes/NotFound.svelte": {
+		"file": "pages/NotFound.svelte-1e2d7744.js",
+		"src": "src/routes/NotFound.svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": ["_vendor-8fe9a59e.js"]
+	},
+	"src/routes/episode/[id]/[season_number]/[episode_number].svelte": {
+		"file": "pages/episode/[id]/[season_number]/[episode_number].svelte-b2314f8e.js",
+		"src": "src/routes/episode/[id]/[season_number]/[episode_number].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": ["_vendor-8fe9a59e.js", "_store-892411d9.js", "_stores-d4b77a7d.js"]
+	},
+	"src/routes/seasons/[id]/[season_number].svelte": {
+		"file": "pages/seasons/[id]/[season_number].svelte-d02d9a7a.js",
+		"src": "src/routes/seasons/[id]/[season_number].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": ["_vendor-8fe9a59e.js", "_store-892411d9.js", "_stores-d4b77a7d.js"]
+	},
+	"src/routes/person/[id].svelte": {
+		"file": "pages/person/[id].svelte-760f9303.js",
+		"src": "src/routes/person/[id].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": ["_vendor-8fe9a59e.js", "_store-892411d9.js", "_stores-d4b77a7d.js"]
+	},
+	"src/routes/search/[id].svelte": {
+		"file": "pages/search/[id].svelte-1dddffde.js",
+		"src": "src/routes/search/[id].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": [
+			"_vendor-8fe9a59e.js",
+			"_MainSection-1a73ad24.js",
+			"_stores-d4b77a7d.js",
+			"_store-892411d9.js",
+			"_Spinner-b4526be0.js"
+		]
+	},
+	"src/routes/genre/movie/[id].svelte": {
+		"file": "pages/genre/movie/[id].svelte-2665c5cb.js",
+		"src": "src/routes/genre/movie/[id].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": [
+			"_vendor-8fe9a59e.js",
+			"_MainSection-1a73ad24.js",
+			"_store-892411d9.js",
+			"_stores-d4b77a7d.js",
+			"_Spinner-b4526be0.js"
+		]
+	},
+	"src/routes/genre/tv/[id].svelte": {
+		"file": "pages/genre/tv/[id].svelte-772d5c35.js",
+		"src": "src/routes/genre/tv/[id].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": [
+			"_vendor-8fe9a59e.js",
+			"_MainSection-1a73ad24.js",
+			"_store-892411d9.js",
+			"_stores-d4b77a7d.js",
+			"_Spinner-b4526be0.js"
+		]
+	},
+	"src/routes/movie/[id].svelte": {
+		"file": "pages/movie/[id].svelte-6ee5b34d.js",
+		"src": "src/routes/movie/[id].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": [
+			"_vendor-8fe9a59e.js",
+			"_store-892411d9.js",
+			"_Spinner-b4526be0.js",
+			"_Cast-72e210fe.js",
+			"_stores-d4b77a7d.js"
+		]
+	},
+	"src/routes/tv/[id].svelte": {
+		"file": "pages/tv/[id].svelte-b0f450f9.js",
+		"src": "src/routes/tv/[id].svelte",
+		"isEntry": true,
+		"isDynamicEntry": true,
+		"imports": [
+			"_vendor-8fe9a59e.js",
+			"_store-892411d9.js",
+			"_stores-d4b77a7d.js",
+			"_Spinner-b4526be0.js",
+			"_Cast-72e210fe.js"
+		]
+	},
+	"_vendor-8fe9a59e.js": {
+		"file": "chunks/vendor-8fe9a59e.js"
+	},
+	"_singletons-12a22614.js": {
+		"file": "chunks/singletons-12a22614.js"
+	},
+	"_store-892411d9.js": {
+		"file": "chunks/store-892411d9.js",
+		"imports": ["_vendor-8fe9a59e.js"]
+	},
+	"_MainSection-1a73ad24.js": {
+		"file": "chunks/MainSection-1a73ad24.js",
+		"imports": [
+			"_vendor-8fe9a59e.js",
+			"_store-892411d9.js",
+			"_Spinner-b4526be0.js",
+			"_stores-d4b77a7d.js"
+		]
+	},
+	"_stores-d4b77a7d.js": {
+		"file": "chunks/stores-d4b77a7d.js",
+		"imports": ["_vendor-8fe9a59e.js"]
+	},
+	"_Spinner-b4526be0.js": {
+		"file": "chunks/Spinner-b4526be0.js",
+		"imports": ["_vendor-8fe9a59e.js"],
+		"css": ["assets/Spinner-11011231.css"]
+	},
+	"_Cast-72e210fe.js": {
+		"file": "chunks/Cast-72e210fe.js",
+		"imports": ["_vendor-8fe9a59e.js", "_store-892411d9.js"]
+	}
 }
