--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"rimraf": "./node_modules/rimraf/bin.js",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-netlify": "^1.0.0-next.38",
-		"@sveltejs/adapter-node": "^1.0.0-next.55",
-		"@sveltejs/adapter-static": "^1.0.0-next.21",
-		"@sveltejs/kit": "^1.0.0-next.228",
+		"@sveltejs/adapter-node": "^1.0.0-next.61",
+		"@sveltejs/adapter-static": "^1.0.0-next.26",
+		"@sveltejs/kit": "next",
 		"@tailwindcss/line-clamp": "^0.3.0",
+		"@types/node": "^17.0.8",
 		"@typescript-eslint/eslint-plugin": "^5.8.0",
 		"@typescript-eslint/parser": "^5.8.0",
 		"autoprefixer": "^10.4.0",
@@ -30,8 +32,8 @@
 		"prettier": "~2.5.1",
 		"prettier-plugin-svelte": "^2.5.1",
 		"stream": "^0.0.2",
-		"svelte": "^3.44.3",
-		"svelte-preprocess": "^4.10.1",
+		"svelte": "^3.42.6",
+		"svelte-preprocess": "^4.9.4",
 		"tailwindcss": "^3.0.7",
 		"tslib": "^2.3.1",
 		"typescript": "^4.5.4",
