--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@sveltejs/adapter-netlify": "^1.0.0-next.38",
 		"@sveltejs/adapter-node": "^1.0.0-next.61",
 		"@sveltejs/adapter-static": "^1.0.0-next.26",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.229",
 		"@tailwindcss/line-clamp": "^0.3.0",
 		"@types/node": "^17.0.8",
 		"@typescript-eslint/eslint-plugin": "^5.8.0",
